# lindera-py

./: .gitignore  CHANGES.md  Cargo.toml  Makefile  README.en.md  README.ja.md  README.md  pyproject.toml
.github/workflows/: periodic.yml  regression.yml  release.yml
examples/: analysis_example.py  basic_usage.py  build_ipadic.py  tokenize.py  tokenize_cc-cedict_example.py  tokenize_example.py  tokenize_ipadic.py  tokenize_ipadic_decompose.py  tokenize_ipadic_filters.py  tokenize_ipadic_userdict.py  tokenize_ko-dic_example.py  tokenize_unidic_example.py  tokenize_with_decompose.py  tokenize_with_filters.py  tokenize_with_userdict.py
src/: analyzer.rs  character_filter.rs  dictionary.rs  error.rs  lib.rs  metadata.rs  mode.rs  schema.rs  segmenter.rs  token.rs  token_filter.rs  tokenizer.rs  util.rs
tests/: test_analyze.py  test_tokenize.py  test_tokenize_cc-cedict.py  test_tokenize_ipadic.py  test_tokenize_ko-dic.py  test_tokenize_unidic.py
