[package]
name = "lindera-py"
version = "0.43.2"
edition = "2021"
description = "Python binding for Lindera."
documentation = "https://docs.rs/lindera-py"
homepage = "https://github.com/lindera-morphology/lindera-py"
repository = "https://github.com/lindera-morphology/lindera-py"
readme = "README.md"
keywords = ["morphological", "analysis", "library", "python"]
categories = ["text-processing"]
license = "MIT"

[lib]
name = "lindera_py"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = [] # No directories included
ipadic = ["lindera/ipadic"] # Include IPADIC dictionary (Japanese)
ipadic-neologd = [
    "lindera/ipadic-neologd",
] # Include IPADIC NEologd dictionary (Japanese)
unidic = ["lindera/unidic"] # Include UniDic dictionary (Japanese)
ko-dic = ["lindera/ko-dic"] # Include ko-dic dictionary (Korean)
cc-cedict = ["lindera/cc-cedict"] # Include CC-CEDICT dictionary (Chinese)
compress = ["lindera/compress"] # Compress dictionaries
cjk = [
    "ipadic",
    "ko-dic",
    "cc-cedict",
    "compress",
] # Include CJK dictionary (Chinese, Japanese, Korean)

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

lindera = "0.43.2"
