[package]
name = "lindera-python"
version = "1.0.1"
edition = "2024"
description = "Python binding for Lindera."
documentation = "https://docs.rs/lindera-python"
homepage = "https://github.com/lindera-morphology/lindera-python"
repository = "https://github.com/lindera-morphology/lindera-python"
readme = "README.md"
keywords = ["morphological", "analysis", "library", "python"]
categories = ["text-processing"]
license = "MIT"

[lib]
name = "lindera"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
embedded-ipadic = [
    "lindera/embedded-ipadic",
] # Include Japanese dictionary (IPADIC)
embedded-ipadic-neologd = [
    "lindera/embedded-ipadic-neologd",
] # Include Japanese dictionary (IPADIC NEologd)
embedded-unidic = [
    "lindera/embedded-unidic",
] # Include Japanese dictionary (UniDic)
embedded-ko-dic = [
    "lindera/embedded-ko-dic",
] # Include Korean dictionary (ko-dic)
embedded-cc-cedict = [
    "lindera/embedded-cc-cedict",
] # Include Chinese dictionary (CC-CEDICT)
embedded-cjk = [
    "lindera/embedded-cjk",
] # Include CJK dictionary (CC-CEDICT, IPADIC, ko-dic)
default = [] # No directories included

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

lindera = "1.1.2"
