[tool.poetry]
name = "lindera_py"
version = "0.43.2"
description = ""
authors = ["Minoru Osuka <minoru.osuka@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
maturin = "^1.8.7"
patchelf = "^0.17.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
black = "^25.1.0"
isort = "^6.0.1"
autopep8 = "^2.3.2"
flake8 = "^7.2.0"
flake8-pyproject = "^1.2.3"
mypy = "^1.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.flake8]
ignore = "E203,E501"
max-line-length = 119

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
ignore_missing_imports = true
