[tool.maturin]
module-name = "lindera"

[project]
name = "lindera-python"
version = "1.0.1"
description = "Python binding for Lindera (no embedded dictionaries)"
authors = [{ name = "Minoru Osuka", email = "minoru.osuka@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["morphological", "analysis", "library", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"

[tool.poetry.dependencies]
python = "^3.13"
maturin = "^1.9.4"
patchelf = "^0.17.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.1.0"
isort = "^6.0.1"
autopep8 = "^2.3.2"
flake8 = "^7.3.0"
flake8-pyproject = "^1.2.3"
mypy = "^1.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.flake8]
ignore = "E203,E501"
max-line-length = 119

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
ignore_missing_imports = true
